--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -25,3 +25,4 @@ tokio = { version = "1.0", features = ["full"] }
 tauri = { version = "2.6.2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-dialog = "2"
+thiserror = "1.0"
