--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,5 @@ tauri = { version = "2.6.2", features = [] }
 tauri-plugin-log = "2"
 tauri-plugin-dialog = "2"
 thiserror = "1.0"
+sysinfo = "0.30"
+trash = "3.0"
